feat(auth): refactor user module, secure transactions by userId
